--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "dvi_serialiser.h": "c",
         "sprite.h": "c",
         "font_24x32.h": "c",
-        "random": "c"
+        "random": "c",
+        "lock_core.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
