achieved 1bpp RGB111 renders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ set(DVI_DEFAULT_SERIAL_CONFIG "pico_sock_cfg" CACHE STRING
 	DVI_DEFAULT_SERIAL_CONFIG=${DVI_DEFAULT_SERIAL_CONFIG}
 	DVI_VERTICAL_REPEAT=1
 	DVI_N_TMDS_BUFFERS=3
-	DVI_MONOCHROME_TMDS=1
+	# DVI_MONOCHROME_TMDS=1
 	)
 
 pico_add_extra_outputs(pico-flightpanel2)
